src/app.css
@import "tailwindcss";

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-destructive-foreground: var(--destructive-foreground);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-ring: var(--ring);
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
}

:root {
	--background: oklch(1 0 0);
	--foreground: oklch(0.141 0.005 285.823);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.141 0.005 285.823);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.141 0.005 285.823);
	--primary: oklch(0.141 0.005 285.823);
	--primary-foreground: oklch(0.985 0.002 247.839);
	--secondary: oklch(0.967 0.001 286.375);
	--secondary-foreground: oklch(0.141 0.005 285.823);
	--muted: oklch(0.967 0.001 286.375);
	--muted-foreground: oklch(0.552 0.016 285.938);
	--accent: oklch(0.967 0.001 286.375);
	--accent-foreground: oklch(0.141 0.005 285.823);
	--destructive: oklch(0.577 0.245 27.325);
	--destructive-foreground: oklch(0.985 0.002 247.839);
	--border: oklch(0.92 0.004 286.32);
	--input: oklch(0.92 0.004 286.32);
	--ring: oklch(0.141 0.005 285.823);
	--radius: 0.625rem;
}

.dark {
	--background: oklch(0.141 0.005 285.823);
	--foreground: oklch(0.985 0.002 247.839);
	--card: oklch(0.141 0.005 285.823);
	--card-foreground: oklch(0.985 0.002 247.839);
	--popover: oklch(0.141 0.005 285.823);
	--popover-foreground: oklch(0.985 0.002 247.839);
	--primary: oklch(0.985 0.002 247.839);
	--primary-foreground: oklch(0.141 0.005 285.823);
	--secondary: oklch(0.254 0.006 285.885);
	--secondary-foreground: oklch(0.985 0.002 247.839);
	--muted: oklch(0.254 0.006 285.885);
	--muted-foreground: oklch(0.711 0.013 286.067);
	--accent: oklch(0.254 0.006 285.885);
	--accent-foreground: oklch(0.985 0.002 247.839);
	--destructive: oklch(0.577 0.245 27.325);
	--destructive-foreground: oklch(0.985 0.002 247.839);
	--border: oklch(0.254 0.006 285.885);
	--input: oklch(0.254 0.006 285.885);
	--ring: oklch(0.871 0.006 286.286);
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
	}
}

